ref #78 só cria parcela matrícula, se tiver valor e for maaior que zero; o mesmo para pgtos de apostilas; só cria parcelas do contrato, se a bolsa for menor que o valor do contrato

--- a/escolar/financeiro/templates/financeiro/contrato_cadastro.html
+++ b/escolar/financeiro/templates/financeiro/contrato_cadastro.html
@@ -60,7 +60,7 @@
           <h3>Arquivo</h3>
           <p><b>arquivo</b>: {{ contrato.arquivo }}</p>
           <p><b>Rescindido</b>: {{ contrato.rescindido|yesno:'sim,não' }}</p>
-          <p><b>Observação</b>: {{ contrato.observacao }}</p>
+          <p><b>Observação</b>: {{ contrato.observacao|default:"" }}</p>
           </div>
       </div>
 
