ref #76 totaliza os alunos no cabeçalho da listagem de alunos

--- a/escolar/escolas/templates/escolas/alunos_list.html
+++ b/escolar/escolas/templates/escolas/alunos_list.html
@@ -13,7 +13,7 @@
   <!-- TODO erver esse br -->
   <br>
     {% if escola %}
-        Alunos / Escola: {{ escola.nome }}
+        Alunos / Escola: {{ escola.nome }} <small>{% if total_alunos%} Total: {{ total_alunos }}{% endif %}</small>
     {% else %}
        Alunos
     {% endif %}
