--- a/escolar/financeiro/templates/financeiro/categorias_list.html
+++ b/escolar/financeiro/templates/financeiro/categorias_list.html
@@ -5,8 +5,8 @@
   <div class="page-header">
   <!-- TODO erver esse br -->
   <br>
-  Categorias de pagamentos: <small> O sistema tem 11 categorias básicas</small> <a href=""><i class="glyphicon glyphicon-question-sign" title="essas categorias não são editáveis"></i></a><br>
-  <small>Você pode criar até mais 9 categorias. Ter muitas categorias pode deixar seu sistema inadministrável</small>
+  Categorias de pagamentos: <small> O sistema tem 12 categorias básicas</small> <a href=""><i class="glyphicon glyphicon-question-sign" title="essas categorias não são editáveis"></i></a><br>
+  <small>Você pode criar até mais 9 categorias.</small> <a href=""><i class="glyphicon glyphicon-question-sign" title="essas categorias serão editáveis, enquanto não houver lançamentos vinculados a ela."></i></a> <small>Ter muitas categorias pode deixar seu sistema inadministrável</small>
   </div>
 {% endblock page_title %}
 
