ref #82 filtro por mês ini a fim

--- a/escolar/financeiro/templates/financeiro/pagamentos_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_list.html
@@ -28,7 +28,8 @@
     <form class="form-inline well" method="GET" >
       <div class="form-group">
         {% bootstrap_field form.ano %}
-        {% bootstrap_field form.mes %}
+        {% bootstrap_field form.mes %} a
+        {% bootstrap_field form.mes_fim %}
         {% bootstrap_field form.categoria %}
         {% bootstrap_field form.titulo %}
         {% bootstrap_field form.efet %}
