ref #82 clean valida e retorna erros, para evitar de filtrar com mes ini maior que mes fim

--- a/escolar/financeiro/templates/financeiro/pagamentos_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_list.html
@@ -26,6 +26,7 @@
   {% include "base_adm.html" %}
   <div class="row-fluid span10">
     <form class="form-inline well" method="GET" >
+      {{ form.errors }}
       <div class="form-group">
         {% bootstrap_field form.ano %}
         {% bootstrap_field form.mes %} a
