--- a/escolar/financeiro/templates/financeiro/pagamentos_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_list.html
@@ -26,11 +26,15 @@
   {% include "base_adm.html" %}
   <div class="row-fluid span10">
     <form class="form-inline well" method="GET" >
-      {{ form.errors }}
+     {{ form.errors }}
+      <!-- <p>{{ form.errors }}</p> -->
       <div class="form-group">
         {% bootstrap_field form.ano %}
         {% bootstrap_field form.mes %} a
         {% bootstrap_field form.mes_fim %}
+        {% bootstrap_field form.serie %}
+      </div>
+      <div class="form-group">
         {% bootstrap_field form.categoria %}
         {% bootstrap_field form.titulo %}
         {% bootstrap_field form.efet %}
@@ -38,6 +42,7 @@
       </div>
       <button type="submit" class="btn btn-primary" title="Filtrar"><i class="glyphicon glyphicon-search"></i></button>
       <a class="btn btn-small btn-info" href="." title="Apagar o filtro e listar todos"><i class="glyphicon glyphicon-remove-circle"></i></a>
+   
     {% if can_edit %}
       <caption>
        <div style="float:right; margin-right:10px">
