--- a/escolar/escolas/templates/escolas/aluno_form.html
+++ b/escolar/escolas/templates/escolas/aluno_form.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load bootstrap3 %}
 {% block css %}
+  <link href="/static/datetimepicker/css/bootstrap-datetimepicker.min.css" type="text/css" media="all" rel="stylesheet" />
+  {{ form.media.css }}
   {{ endereco_form.media.css }}
   <style type="text/css">
     #id_serie,
@@ -106,5 +108,8 @@
 {% endblock content %}
 
 {% block extra_js %}
-    {{ form.media }}
+    <script type="text/javascript" src="/static/datetimepicker/js/moment.min.js"></script>
+    <script type="text/javascript" src="/static/datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
+    <script type="text/javascript" src="/static/datetimepicker/js/locales/bootstrap-datetimepicker.pt-BR.js"></script>
+    {{ form.media.js }}
 {% endblock extra_js %}
