--- a/escolar/escolas/templates/escolas/membro_familia_form.html
+++ b/escolar/escolas/templates/escolas/membro_familia_form.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% load bootstrap3 %}
 {% block extra_css %}
-    {{ formset.media.css }}
+<link href="/static/datetimepicker/css/bootstrap-datetimepicker.min.css" type="text/css" media="all" rel="stylesheet" />
+  {{ form.media.css }}
 {% endblock extra_css %}
 {% block page_title %}
   <div class="page-header">
@@ -75,5 +76,8 @@
 {% endblock content %}
 
 {% block extra_js %}
-  {{ formset.media }}
+  <script type="text/javascript" src="/static/datetimepicker/js/moment.min.js"></script>
+  <script type="text/javascript" src="/static/datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
+  <script type="text/javascript" src="/static/datetimepicker/js/locales/bootstrap-datetimepicker.pt-BR.js"></script>
+  {{ form.media.js }}
 {% endblock extra_js %}
