--- a/escolar/financeiro/templates/financeiro/contrato_form.html
+++ b/escolar/financeiro/templates/financeiro/contrato_form.html
@@ -1,6 +1,8 @@
 {% extends 'base.html'%}
 {% load bootstrap3 %}
 {% block css %}
+  <link href="/static/datetimepicker/css/bootstrap-datetimepicker.min.css" type="text/css" media="all" rel="stylesheet" />
+  {{ form.media.css }}
   <style type="text/css">
     #id_serie,
     #id_ano,
@@ -18,10 +20,6 @@
     #id_matricula_nr,
     #id_material_valor {
       width: 100px;
-      height: 35px;
-    }
-    #id_data_assinatura {
-      width: 120px;
       height: 35px;
     }
    </style>
@@ -107,5 +105,8 @@
 {% endblock content %}
 
 {% block extra_js %}
-    {{ form.media }}
+  <script type="text/javascript" src="/static/datetimepicker/js/moment.min.js"></script>
+  <script type="text/javascript" src="/static/datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
+  <script type="text/javascript" src="/static/datetimepicker/js/locales/bootstrap-datetimepicker.pt-BR.js"></script>
+  {{ form.media.js }}
 {% endblock extra_js %}
