--- a/escolar/financeiro/templates/financeiro/contratos_list.html
+++ b/escolar/financeiro/templates/financeiro/contratos_list.html
@@ -30,6 +30,7 @@
         
         {% bootstrap_field form.responsavel %}
         {% bootstrap_field form.aluno %}
+        {% bootstrap_field form.ano %}
         {% bootstrap_field form.serie %}
         {% bootstrap_field form.curso %}
       </div>
