ref #85 funcionalidade de marcar contrato assinado e Filtro de Assinado, não assinado: implementada

--- a/escolar/financeiro/templates/financeiro/contratos_list.html
+++ b/escolar/financeiro/templates/financeiro/contratos_list.html
@@ -27,12 +27,14 @@
   <div class="row-fluid span10">
     <form class="form-inline well" method="GET" >
       <div class="form-group">
-        
         {% bootstrap_field form.responsavel %}
         {% bootstrap_field form.aluno %}
         {% bootstrap_field form.ano %}
         {% bootstrap_field form.serie %}
         {% bootstrap_field form.curso %}
+      </div>
+      <div class="form-group">
+        {% bootstrap_field form.assinado %}
       </div>
       <button type="submit" class="btn btn-primary" title="Filtrar"><i class="glyphicon glyphicon-search"></i></button>
       <a class="btn btn-small btn-info" href="." title="Apagar o filtro e listar todos"><i class="glyphicon glyphicon-remove-circle"></i></a>
