ref #89 coloca um form com o nr de parcelas da matrícula, 0 a 6; iníco da adaptação do métod set_matricula para parcelar

--- a/escolar/financeiro/templates/financeiro/contrato_form.html
+++ b/escolar/financeiro/templates/financeiro/contrato_form.html
@@ -74,6 +74,7 @@
               <p>{% bootstrap_field form.nr_parcela %}</p>
               <p>{% bootstrap_field form.matricula_nr %}</p>
               <p>{% bootstrap_field form.matricula_valor %}</p>
+              <p>{% bootstrap_field form.parcelas %}</p>
               <p>{% bootstrap_field form.data_assinatura %}</p>
               <p>{% bootstrap_field form.arquivo %}</p>
             </div>
