--- a/escolar/escolas/templates/escolas/parabens_form.html
+++ b/escolar/escolas/templates/escolas/parabens_form.html
@@ -1,6 +1,11 @@
 {% extends 'base.html'%}
 {% load bootstrap3 %}
 {% block css %}
+  <style type="text/css">
+    #id_mensagem{
+      height: 100px;
+    }
+   </style>
 {% endblock css %}
 
 {% block page_title %}
@@ -8,7 +13,7 @@
   <!-- TODO erver esse br -->
   <br>
     {% if escola %}
-        Parabéns / {{ escola.nome }} : {{ pessoa.nome }}
+        {{ escola.nome }} - <small> Aniversariante:</small> {{ pessoa.nome }} <small>nascimento: {{ pessoa.nascimento|date:"d/m/Y"}}</small>
     {% else %}
         Parabéns
     {% endif %}
@@ -26,9 +31,11 @@
           <div class="row">
             <!-- {# Celular, Tablet, Computador #} -->
             <div class="col-xs-12 col-sm-9 col-md-6">
-              <p>{% bootstrap_field form.email %}</p>
-              <p>{% bootstrap_field form.titulo %}</p>
-              <p>{% bootstrap_field form.mensagem %}</p>
+              {% bootstrap_field form.email %}
+              {% bootstrap_field form.titulo %}
+              {{ pessoa.nome }}
+              {% bootstrap_field form.mensagem %}
+              {% bootstrap_field form.assinatura %}
             </div>
         </div>
       </div>
