ref #90 ajustes nos templates de  pagamentos'

--- a/escolar/financeiro/templates/financeiro/pagamentos_aluno_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_aluno_list.html
@@ -50,7 +50,7 @@
         <th>Título</th>
         <th>Data</th>
         <th>Valor</th>
-        <th>Responsavel/<br>Aluno</th>
+        <th>Responsável/<br>Aluno</th>
         <th>Forma de <br>Pagamento</th>
         <th>Pagar</th>
       </tr>
