--- a/escolar/financeiro/templates/financeiro/pagamentos_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_list.html
@@ -64,7 +64,7 @@
         <th>Data</th>
         <th>Valor</th>
         <th>Categoria</th>
-        <th>Responsavel/<br>Aluno</th>
+        <th>Responsável/<br>Aluno</th>
         <th>Forma de <br>Pagamento</th>
         <th>Pagar</th>
       </tr>
