ref #90 Filtro funcionando, mult select

--- a/escolar/financeiro/templates/financeiro/pagamentos_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_list.html
@@ -45,6 +45,11 @@
         {% bootstrap_field form.efet %}
         {% bootstrap_field form.tipo  %}
       </div>
+      <p></p>
+      <div class="form-group">
+        {% bootstrap_field form.forma_pgto %}
+      </div>
+
       <button type="submit" class="btn btn-primary" title="Filtrar"><i class="glyphicon glyphicon-search"></i></button>
       <a class="btn btn-small btn-info" href="." title="Apagar o filtro e listar todos"><i class="glyphicon glyphicon-remove-circle"></i></a>
    
