ref #91 views, urls para gerar a planilha

--- a/escolar/financeiro/templates/financeiro/pagamentos_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_list.html
@@ -57,7 +57,8 @@
       <caption>
        <div style="float:right; margin-right:10px">
         <a href="{% url 'pagamento_form' escola.id %}" class="btn btn-mini btn-success">Novo Pagamento</a>
-       </div>
+          <!-- <input type="submit" name="gerar_planilha_xls" value="Gerar planilha" class="btn btn-primary"> -->
+        </div>
       </caption>
     {% endif %}
     </form>
