--- a/escolar/financeiro/templates/financeiro/pagamentos_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_list.html
@@ -58,6 +58,13 @@
        <div style="float:right; margin-right:10px">
         <a href="{% url 'pagamento_form' escola.id %}" class="btn btn-mini btn-success">Novo Pagamento</a>
           <!-- <input type="submit" name="gerar_planilha_xls" value="Gerar planilha" class="btn btn-primary"> -->
+
+          <input id="id_gera_xls"
+                 type="button"
+                 onclick="window.location.href='{% url 'pagamentos_gera_xls' %}?pagamentos_ids={{ pagamentos_ids }}'"
+                 style="margin-bottom: 5px; margin-top: 2px;"
+                 class="button"
+                 value="Gerar XLS">
         </div>
       </caption>
     {% endif %}
