--- a/escolar/financeiro/templates/financeiro/contrato_form.html
+++ b/escolar/financeiro/templates/financeiro/contrato_form.html
@@ -82,10 +82,10 @@
               <small>Apostilas</small> <a href=""><i class="glyphicon glyphicon-question-sign" title="Se preencher 1 campo o outro será requerido"></i></a>
               <p>{% bootstrap_field form.material_valor %}</p>
               <p>{% bootstrap_field form.material_parcelas %}</p>
-              <small>Recisão</small> <a href=""><i class="glyphicon glyphicon-question-sign" title="Se marcar como Rescindido a &#10 Observação será requerida. &#10 &#10 As parcelas não pagas, deixarão de ser contabilizadas e &#10 todas parcelas deixarão de ser ediáveis. "></i></a>
+              <p>{% bootstrap_field form.assinado %}</p>
+              <small>Recisão</small> <a href=""><i class="glyphicon glyphicon-question-sign" title="Se marcar como Rescindido o &#10 motivo será requerido. &#10 &#10 As parcelas não pagas, deixarão de ser contabilizadas e &#10 todas parcelas deixarão de ser ediáveis. "></i></a>
               <p>{% bootstrap_field form.rescindido %}</p>
               <p>{% bootstrap_field form.observacao %}</p>
-              <p>{% bootstrap_field form.assinado %}</p>
             </div>
           </div>
         </div>
