ref #93 coloca totai de objetos carregados, no cabeçalho de algumas listagens; remove fixtures antigas e cria uma nova

--- a/escolar/financeiro/templates/financeiro/contratos_aluno_list.html
+++ b/escolar/financeiro/templates/financeiro/contratos_aluno_list.html
@@ -6,7 +6,7 @@
   <!-- TODO erver esse br -->
   <br>
     {% if aluno.id %}
-        Aluno: {{ aluno.nome }}
+        Aluno: {{ aluno.nome }}  <small>Total: {{ total }}</small>
     {% else %}
        Aluno
     {% endif %}
