--- a/escolar/financeiro/templates/financeiro/contratos_list.html
+++ b/escolar/financeiro/templates/financeiro/contratos_list.html
@@ -14,7 +14,7 @@
   <!-- TODO erver esse br -->
   <br>
     {% if escola %}
-      Contratos / Escola: {{ escola.nome }}
+      Contratos / Escola: {{ escola.nome }} <small>Total: {{ total }}</small>
     {% else %}
       Contratos
     {% endif %}
