--- a/escolar/core/templates/base.html
+++ b/escolar/core/templates/base.html
@@ -28,6 +28,23 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style type="text/css">
+
+      .cssMessage{
+         display: block;
+         position: fixed;
+         top: 0;
+         left: 50%;
+         right: 10%;
+         width: 40%;
+         z-index: 9999;
+      }
+      .cssInner {
+        margin-top: 55px;
+        margin: 55 auto;
+        box-shadow: 1px 1px 5px black;
+      }
+     </style>
   </head>
   {% block css %}{% endblock css %}
 </head>
@@ -36,12 +53,13 @@
     <div class="container-fluid">
       {% include 'nav_gestor.html' %}
     </div>
+  </nav>
     {% if messages %}
-      <div class="row-fluid">
-        <div class="span12" >
+      
+        <div class="span12" align="center">
           {% autoescape off %}
             {% for message in messages %}
-              <div class="alert alert-{% if message.tags %}{{ message.tags }}{% endif %}" role="alert">
+              <div class="alert alert-{% if message.tags %}{{ message.tags }}{% endif %} cssMessage cssInner" role="alert">
                 <button type="button" class="close" data-dismiss="alert">Fechar</button>
                 {% if 'info' in message.tags %}<i class="glyphicon glyphicon-info-sign"></i>{% endif %}
                 {% if 'warning' in message.tags %}<i class="glyphicon glyphicon-warning-sign"></i>{% endif %}
@@ -52,9 +70,8 @@
             {% endfor %}
           {% endautoescape %}
         </div>
-      </div>
+ 
     {% endif %}
-  </nav>
  
   <div class="container-fluid">
   <!-- {# container-fluid: para conteúdo responsivo com largura fluída, isto é, toda a largura da janela. #} -->
@@ -93,7 +110,52 @@
     <script type="text/javascript" src="{% static 'datetimepicker/js/moment.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'datetimepicker/js/bootstrap-datetimepicker.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'datetimepicker/js/locales/bootstrap-datetimepicker.pt-BR.js' %}"></script>
+    <script type="text/javascript">
+    function mostraDialogo(mensagem, tipo, tempo){
+    
+    // se houver outro alert desse sendo exibido, cancela essa requisição
+    if($("#message").is(":visible")){
+        return false;
+    }
+
+    // se não setar o tempo, o padrão é 3 segundos
+    if(!tempo){
+        var tempo = 3000;
+    }
+
+    // se não setar o tipo, o padrão é alert-info
+    if(!tipo){
+        var tipo = "info";
+    }
+
+    // monta o css da mensagem para que fique flutuando na frente de todos elementos da página
+    var cssMessage = "display: block; position: fixed; top: 0; left: 20%; right: 20%; width: 60%; padding-top: 10px; z-index: 9999";
+    var cssInner = "margin: 0 auto; box-shadow: 1px 1px 5px black;";
+
+    // monta o html da mensagem com Bootstrap
+    var dialogo = "";
+    dialogo += '<div id="message" style="'+cssMessage+'">';
+    dialogo += '    <div class="alert alert-'+tipo+' alert-dismissable" style="'+cssInner+'">';
+    dialogo += '    <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>';
+    dialogo +=          mensagem;
+    dialogo += '    </div>';
+    dialogo += '</div>';
+
+    // adiciona ao body a mensagem com o efeito de fade
+    $("body").append(dialogo);
+    $("#message").hide();
+    $("#message").fadeIn(200);
+
+    // contador de tempo para a mensagem sumir
+    setTimeout(function() {
+        $('#message').fadeOut(300, function(){
+            $(this).remove();
+        });
+    }, tempo); // milliseconds
+
+  }
     {% block extra_js %} {% endblock extra_js%}
+  </script>
 </body>
 
 </html>
